<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/photo8"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/caja"
        android:padding="10dp"
        android:text="@string/subtitle"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorAccentTransparente"
        android:text="@string/simple_login"
        android:textColor="#fff" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorAccentTransparente"
        android:text="@string/simple_register"
        android:textColor="#fff" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccentTransparente"
        android:layout_marginRight="25dp" />

</LinearLayout>