<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentoProfile"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/perfil_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_register"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/username"
                android:textSize="10sp"
                />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/desc_profile"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>



    </android.support.v7.widget.CardView>

</FrameLayout>